--- a/www/less/footer.less
+++ b/www/less/footer.less
@@ -12,13 +12,13 @@ body {
   margin-bottom: 50px;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 80px;
-}
+// footer {
+//   // position: absolute;
+//   // bottom: 0;
+//   // width: 100%;
+
+//   // height: 80px;
+// }
 
 /*
   Other footer height for Boostrap xs, sm
@@ -37,6 +37,11 @@ footer {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+ 
+  /* Set the fixed height of the footer here */
+  height: 80px;
   width: 100%;
   margin: 0 auto;
   background-color: #e6e8ed;
