--- a/www/css/main.css
+++ b/www/css/main.css
@@ -24,6 +24,22 @@ header h1{
 	font-size: 20px;
 }
 
+.jumbotron h1{
+	font-size: 50px;
+}
+
+@media screen and (max-width: 768px) {
+	.jumbotron h1{
+		font-size: 20px;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.jumbotron h1{
+		font-size: 40px;
+	}
+}
+
 .jumbotron .btn{
 	border: 1px solid black;
 }
