--- a/www/less/footer.less
+++ b/www/less/footer.less
@@ -27,7 +27,7 @@ footer {
   bottom: 0;
  
   /* Set the fixed height of the footer here */
-  height: 80px;
+  // height: 80px;
   width: 100%;
   margin: 0 auto;
   // background-color: #e6e8ed;
