--- a/www/css/footer.css
+++ b/www/css/footer.css
@@ -8,17 +8,16 @@ body {
   /* Margin bottom by footer height
      or slightly more for more space before footer
   */
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
-
 footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
   /* Set the fixed height of the footer here */
-  height: 80px;
+  width: 100%;
+  margin: 0 auto;
+  font-family: 'Aldrich', sans-serif;
 }
-
 footer p {
   margin: 0;
   text-align: center;
@@ -32,7 +31,6 @@ footer :after {
   display: table;
   clear: both;
 }
-
 /*
   Other footer height for Boostrap xs, sm
   (for breakpoint see: https://getbootstrap.com/css/)
