--- a/www/css/style.css
+++ b/www/css/style.css
@@ -58,6 +58,12 @@
 .rules h2 {
   font-size: 2.4rem;
 }
+h2.modal-title {
+  font-family: 'Emilys Candy', cursive;
+}
+h2.vinn {
+  font-family: 'Emilys Candy', cursive;
+}
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -73,24 +79,40 @@ body {
 footer {
   position: absolute;
   bottom: 0;
-  /* Set the fixed height of the footer here */
+  width: 100%;
+  height: 80px;
+  background-color: #b0b7c1;
+}
+/*
+footer {
+  position: absolute;
+  bottom: 0;
+
+
   width: 100%;
   margin: 0 auto;
+ background-color: #e6e8ed;
+
   font-family: 'Aldrich', sans-serif;
+
+  p {
+
+    margin:0;
+    text-align: center;
+  }
+
+  div {
+    float: left;
+    width: 33%;
+  }
+
+  :after {
+  content:  "";
+  display:  table;
+  clear:  both;
+  }
 }
-footer p {
-  margin: 0;
-  text-align: center;
-}
-footer div {
-  float: left;
-  width: 33%;
-}
-footer :after {
-  content: "";
-  display: table;
-  clear: both;
-}
+*/
 /*
   Other footer height for Boostrap xs, sm
   (for breakpoint see: https://getbootstrap.com/css/)
