--- a/www/less/footer.less
+++ b/www/less/footer.less
@@ -12,25 +12,24 @@ body {
   margin-bottom: 100px;
 }
 
-// footer {
-//   // position: absolute;
-//   // bottom: 0;
-//   // width: 100%;
-
-//   // height: 80px;
-// }
-
-
-
 footer {
   position: absolute;
   bottom: 0;
- 
-  /* Set the fixed height of the footer here */
-  // height: 80px;
+  width: 100%;
+  height: 80px;
+  background-color: #b0b7c1;
+ }
+
+
+/*
+footer {
+  position: absolute;
+  bottom: 0;
+
+
   width: 100%;
   margin: 0 auto;
-  // background-color: #e6e8ed;
+ background-color: #e6e8ed;
 
   font-family: 'Aldrich', sans-serif;
 
@@ -51,7 +50,7 @@ footer {
   clear:  both;
   }
 }
-
+*/
 /*
   Other footer height for Boostrap xs, sm
   (for breakpoint see: https://getbootstrap.com/css/)
