Ändrat 2 link adress och main.less (delen online spel)

--- a/www/css/body.css
+++ b/www/css/body.css
@@ -1,8 +1,7 @@
-/*
 body {
   background-color: #fcfcfc;
   font-family: 'Zilla Slab', serif;
   font-size: 18px;
   line-height: 130%;
-  background:#fff;
-}*/
+  background: #fff;
+}
