--- a/www/css/style.css
+++ b/www/css/style.css
@@ -182,6 +182,9 @@ header {
   top: -1px;
   z-index: 3;
 }
+header div.row {
+  margin: 0;
+}
 body {
   background-color: #fcfcfc;
   font-family: 'Zilla Slab', serif;
