--- a/www/less/style.less
+++ b/www/less/style.less
@@ -1,8 +1,2 @@
-@import "variables";
-@import "rules";
-@import "winpop";
-@import "footer";
 @import "main";
-@import "header";
-@import "body";
-
+@import "colors";
