--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,13 +8,7 @@ body {
 }
 header {
   min-height: 60px;
-  border-bottom: 1px solid #e86d49;
-}
-nav {
-  height: 100%;
-  position: absolute !important;
-  top: 50%;
-  transform: translateY(-50%);
+  border: 1px solid #e86d49;
 }
 .img-brand {
   width: 40px;
@@ -49,6 +43,7 @@ main {
 .btn-red-nav {
   background-color: #e86d49;
   color: #fdffee;
+  border-bottom: 1px solid transparent;
   border-radius: 0;
 }
 .btn-red-nav:hover {
