--- a/www/less/main.less
+++ b/www/less/main.less
@@ -7,13 +7,7 @@ body {
 }
 header{
 	min-height: 60px;
-  border-bottom: 1px solid @red;
-}
-nav{
-  height: 100%;
-  position: absolute !important;
-  top: 50%;
-  transform: translateY(-50%);
+  border: 1px solid @red;
 }
 .img-brand{
   width: 40px;
@@ -49,6 +43,7 @@ main{
 .btn-red-nav{
   background-color: @red;
   color: @light-grey;
+  border-bottom: 1px solid transparent;
   border-radius: 0;
 }
 .btn-red-nav:hover{
