--- a/www/less/main.less
+++ b/www/less/main.less
@@ -87,3 +87,8 @@ main{
 .border-blue{
   border: 1px solid @blue;
 }
+a.online-spel { 
+  position: absolute; 
+  bottom: 15px; 
+  right: 20px; 
+}
