--- a/www/less/main.less
+++ b/www/less/main.less
@@ -45,6 +45,7 @@ main{
   color: @light-grey;
   border-bottom: 1px solid transparent;
   border-radius: 0;
+  width: fit-content;
 }
 .btn-red-nav:hover{
   background-color: @red;
@@ -87,8 +88,8 @@ main{
 .border-blue{
   border: 1px solid @blue;
 }
-a.online-spel { 
-  position: absolute; 
-  bottom: 15px; 
-  right: 20px; 
-}
+// a.online-spel {
+//   position: absolute;
+//   bottom: 15px;
+//   right: 20px;
+// }
